Fix white sidebar on mobile

--- a/src/components/lancer/MechState/MechCentralDiamond.scss
+++ b/src/components/lancer/MechState/MechCentralDiamond.scss
@@ -66,6 +66,7 @@ $grid_count: 8;
       position: absolute;
       left: 50%;
       top: 50%;
+      overflow: hidden;
 
       box-sizing: border-box;
 			width: 100%;
